0032861: Visualization - Separate rotate and move the object behavior in AIS_ViewController

Added the flag in Dragging structure that defines perform dragging (ToMove).